--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "@sklinet/strapi-plugin-tinymce": "^1.0.7",
     "@strapi/plugin-cloud": "4.21.0",
     "@strapi/plugin-graphql": "^4.21.0",
     "@strapi/plugin-i18n": "4.21.0",
