--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@strapi/plugin-graphql": "^4.21.0",
     "@strapi/plugin-i18n": "4.21.0",
     "@strapi/plugin-users-permissions": "4.21.0",
+    "@strapi/provider-upload-cloudinary": "^4.21.1",
     "@strapi/strapi": "4.21.0",
     "mysql": "^2.18.1",
     "react": "^18.0.0",
