--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@strapi/plugin-i18n": "4.21.0",
     "@strapi/plugin-users-permissions": "4.21.0",
     "@strapi/provider-upload-cloudinary": "^4.21.1",
-    "@strapi/strapi": "4.21.0",
+    "@strapi/strapi": "^5.1.1",
     "mysql": "^2.18.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
