--- a/package.json
+++ b/package.json
@@ -10,21 +10,18 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@sklinet/strapi-plugin-tinymce": "^1.0.7",
-    "@strapi/plugin-cloud": "4.21.0",
-    "@strapi/plugin-graphql": "^4.21.0",
-    "@strapi/plugin-i18n": "4.21.0",
-    "@strapi/plugin-users-permissions": "4.21.0",
-    "@strapi/provider-upload-cloudinary": "^4.21.1",
+    "@sklinet/strapi-plugin-tinymce": "^1.1.6",
+    "@strapi/plugin-cloud": "^5.16.0",
+    "@strapi/plugin-graphql": "^5.16.0",
+    "@strapi/plugin-users-permissions": "^5.16.0",
+    "@strapi/provider-upload-cloudinary": "^5.16.0",
     "@strapi/strapi": "^5.1.1",
     "mysql": "^2.18.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "5.3.4",
-    "strapi-plugin-multi-select": "^1.2.3",
-    "strapi-plugin-transformer": "^3.1.2",
-    "strapi-plugin-untransform-response": "^0.1.7",
-    "styled-components": "5.3.3"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.30.1",
+    "strapi-plugin-multi-select": "^2.1.1",
+    "styled-components": "^6.1.19"
   },
   "author": {
     "name": "A Strapi developer"
